customer details added

--- a/src/main/resources/META-INF/velocity/menuMailTemplate.vm
+++ b/src/main/resources/META-INF/velocity/menuMailTemplate.vm
@@ -35,7 +35,8 @@
 	</head>
 	
 	<body>
-Customer: ${customer.token}.
+
+Customer: ${customer.firstName} ${customer.lastName} &lt;${customer.email}&gt;
 
 
 
