--- a/src/main/webapp/backoffice/order/list3/views/list3.ejs
+++ b/src/main/webapp/backoffice/order/list3/views/list3.ejs
@@ -1,6 +1,5 @@
-<% console.log( this ) %>
 <% if ( this.length == 0 ) { %>
-	<li>There are no active orders at the moment.</li>
+	<span>There are no active orders at the moment.</span>
 <% } %>
 
 <b>Table by date</b>
