--- a/src/main/webapp/shop/referral/new/views/referralDetail.ejs
+++ b/src/main/webapp/shop/referral/new/views/referralDetail.ejs
@@ -13,12 +13,12 @@
 
 	<div id="recipientEmailDiv">
 		<label><%= msg( "referral.detail.recipientEmail" ) %>:</label> 
-		<input id="recipientEmail" type="text" value="ladislav.nemeth@gmail.com">
+		<input id="recipientEmail" type="text" value="">
 	</div>
 
 	<div id="referralMessageDiv">
 		<label><%= msg( "referral.detail.referralMessage" ) %>:</label> 
-		<textarea id="referralMessage">I think you might like this delivery service...</textarea>
+		<textarea id="referralMessage"></textarea>
 	</div>
 	
 </div>
