--- a/src/main/resources/META-INF/velocity/menuMailTemplate.vm
+++ b/src/main/resources/META-INF/velocity/menuMailTemplate.vm
@@ -92,7 +92,7 @@
 
 		<h4>Lunch4you Contacts</h4>
 		<p>
-		In case of any questions or issues please contact Lunch4you at <a href="mailto:Lunch4you.cz@gmail.com">Lunch4you.cz@gmail.com</a> or call +420 774096313.
+		In case of any questions or issues please contact Lunch4you at ${contactDetails}
 		</p>
 
 		<p>
