Templates added for all delivery locations

--- a/src/main/resources/META-INF/velocity/menuMailTemplate.vm
+++ b/src/main/resources/META-INF/velocity/menuMailTemplate.vm
@@ -71,7 +71,7 @@
 				<span class="special-price">***</span> 
 			</td>
 			<td class="menuNotes" colspan="2">
-				<i>Cena této položky je 10,- CZK, jeli objednána s hlavním jídlem. / Price of this item is 10,- CZK when ordered together with a main meal</i>
+				<i>Price of this item is 10,- CZK when ordered together with a main meal.</i>
 			</td>
 		</tr>
 	</table>
