--- a/src/main/webapp/backoffice/order/list3/views/ordersByDate.ejs
+++ b/src/main/webapp/backoffice/order/list3/views/ordersByDate.ejs
@@ -19,4 +19,10 @@
 		 	
 		<span class="orderTime"><%= order.timeString %></span>
 		<div style="clear : both;"></div>
+	<% if( order.note ) { %>
+		<span class="note">
+			<%= order.note %>
+		</span>
+		<div style="clear : both;"></div>
+	<% } %>
 	</div>
