--- a/src/main/webapp/shop/order/new/views/orderInfo.ejs
+++ b/src/main/webapp/shop/order/new/views/orderInfo.ejs
@@ -23,6 +23,12 @@
 		<% } %>
 		</select>
 	</div>
+	
+	<div id="noteDiv">
+		<label><%= msg( "order.detail.note" ) %>:</label> 
+		<textarea id="note"></textarea>
+	</div>
+
 </div>
 
 <h4><%= localize( meal.category, "name" ) %></h4>
