--- a/src/main/resources/META-INF/velocity/confirmationMailTemplate.vm
+++ b/src/main/resources/META-INF/velocity/confirmationMailTemplate.vm
@@ -1,13 +1,17 @@
+#set( $item = $order.Items.get(0) )
 Dear customer,
 
 This is an automated confirmation email about your recently placed order to Lunch4you service. Please note that some links within this email are personalized for your account, do not forward this email to other recipients.
 
 Order details:
 
-Meal:               ${order.Items.get(0).Article.Name_cz}/${order.Items.get(0).Article.Name_en}
-Price:              ${order.Items.get(0).Article.Price},- CZK.
+Meal:               ${item.Article.Name_cz}/${order.Items.get(0).Article.Name_en}
+Price:              ${item.Article.Price},- CZK #if($isDiscount) ***#end
+
 Delivery location:  ${order.deliveryLocation.name}
 Ordered on:         ${orderDate}
+
+#if($isDiscount) *** Please note that a discounted price of 10,- CZK applies if main meal (meal for 80,- CZK or more) is ordered on the same day. #end 
 
 
 For further ordering please use following link:
