--- a/src/main/webapp/common/register_customer/views/form.ejs
+++ b/src/main/webapp/common/register_customer/views/form.ejs
@@ -7,7 +7,7 @@
 <% var ddlId = "reg_ddl" %>
 <% var subscribeId = "reg_subscribe" %>
 
-<form action="javascript:">
+<form id="customerForm" action="javascript:">
 	<table>
 		<tbody>
 			<tr>
