Unfinished comment block repaired. It screwed up the whole screen in IE6

--- a/src/main/webapp/shop/order/new/views/orderInfo.ejs
+++ b/src/main/webapp/shop/order/new/views/orderInfo.ejs
@@ -37,8 +37,8 @@
 		<% } %>
 		</div>
 
-		<!--div id="customerForm" class="in-place" style="display:none;"-->
-		</div>
+		<!--div id="customerForm" class="in-place" style="display:none;">
+		</div-->
 	</div>
 
 </div>
