Token removing reverted back

--- a/src/main/webapp/shop/order/new/views/orderInfo.ejs
+++ b/src/main/webapp/shop/order/new/views/orderInfo.ejs
@@ -53,4 +53,4 @@
 	<input id="order" type="button" value="<%= msg( "order.detail.action.order" ) %>" />
 </form>
 
-<p><a href="#view=menu"><%= msg( "order.detail.viewMenu" ) %></a></p>
+<p><a href="#view=menu&token=<%= Shop.params.token %>"><%= msg( "order.detail.viewMenu" ) %></a></p>
